--- a/music_prediction.ipynb
+++ b/music_prediction.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -34,14 +20,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "music = pd.read_csv('music.csv')\n",
-        "x = music.drop(columns=['genre'])\n",
-        "y = music['genre']\n",
-        "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.10)\n",
-        "model = DecisionTreeClassifier()\n",
-        "model.fit(x_train,y_train)"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -49,25 +28,30 @@
         "id": "J0WB5P0-6yzE",
         "outputId": "021874b1-9cbc-4d1e-d2ec-c506b2661d3e"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "DecisionTreeClassifier()"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "music = pd.read_csv('music.csv')\n",
+        "x = music.drop(columns=['genre'])\n",
+        "y = music['genre']\n",
+        "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.10)\n",
+        "model = DecisionTreeClassifier()\n",
+        "model.fit(x_train,y_train)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model = joblib.load('music-prediction.joblib')\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,25 +59,24 @@
         "id": "OrAeysMl42pK",
         "outputId": "18900ce4-3dd0-4aca-cb1a-f5cece448215"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.8/dist-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 0.23.2 when using version 1.0.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
             "https://scikit-learn.org/stable/modules/model_persistence.html#security-maintainability-limitations\n",
             "  warnings.warn(\n"
           ]
         }
+      ],
+      "source": [
+        "x_test\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model_pred = model.predict(x_test)\n",
-        "model_pred\n"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,35 +84,34 @@
         "id": "qKColkV145Dt",
         "outputId": "ef0c31a8-e9e0-4055-9d79-18e8c3e21db6"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.8/dist-packages/sklearn/base.py:443: UserWarning: X has feature names, but DecisionTreeClassifier was fitted without feature names\n",
             "  warnings.warn(\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array(['Jazz', 'Acoustic'], dtype=object)"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "model_pred = model.predict(x_test)\n",
+        "model_pred\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "tree.export_graphviz(model, out_file='music-tree.dot',feature_names=['age','gender'], class_names=sorted(y.unique()),label='all',rounded=True, filled=True)\n",
-        "score = accuracy_score(y_test, model_pred)\n",
-        "score"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,19 +119,37 @@
         "id": "tRM-TWZC46xc",
         "outputId": "ad39d755-303d-48b2-8743-7e9a1b947fdc"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1.0"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "tree.export_graphviz(model, out_file='music-tree.dot',feature_names=['age','gender'], class_names=sorted(y.unique()),label='all',rounded=True, filled=True)\n",
+        "score = accuracy_score(y_test, model_pred)\n",
+        "score"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
